--- a/_posts/2019-06-25-hello.md
+++ b/_posts/2019-06-25-hello.md
@@ -1,11 +1,10 @@
 ---
-title: "안녕"
+title: "Hello"
 date: 2019-10-10 17:44:00 -0400
-categories: node.js
+categories: test
 ---
-안녕 내 첫번째 포스트
-node.js command prompt change default directory
 
+hello world
 
 
 
